Release history for Dist-Zilla-App-Command-dumpphases

{{$NEXT}}

1.000008 2016-09-10T07:27:49Z d11870f
 [Dependencies::Stats]
 - Dependencies changed since 1.000007, see misc/*.deps* for details
 - configure: (suggests: +1)
 - develop: +5 ↑1 -1 (suggests: ↑2)

 [Features / Win32 ANSI Colors]
 - ANSI Escape code colours should render correctly on Win32 if users have Win32::Console::ANSI installed.
 - Patched (with thanks) by Roy Ivy III ( #5 )

1.000007 2015-04-13T01:57:06Z e09e102
 [Documentation]
 - Redirect media URIs to different repo.

 [Packaging]
 - Nuke embedded media to slim installation/download.

1.000006 2015-04-10T07:17:31Z d9fc4b6
 [Dependencies::Stats]
 - Dependencies changed since 1.000005, see misc/*.deps* for details
 - develop: +3 ↑3 -1 (recommends: ↓1, suggests: ↑2)
 - runtime: (recommends: +2)
 - test: (recommends: ↓1)

 [Internals]
 - Avoid pointless method calls to resolve defaults.
 - Use simple loading to validate themes instead of complex dir scanning, and only attempt dir scanning to report
   alternative themes when no matching theme is found.

1.000005 2014-10-31T00:00:38Z 45e3144
 [Dependencies::Stats]
 - Dependencies changed since 1.000004, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +6 ↑2 -1 (recommends: +1, suggests: ↑2)
 - runtime: ↓1 -1
 - test: +1 (recommends: ↑2)

 [Internals]
 - stop requiring utf8
 - now supports 5.006

1.000004 2014-08-16T00:00:52Z
 [00 Trivial]
 - CPANDAY!
 - Metadata changes re: contributors

 [Dependencies::Stats]
 - Dependencies changed since 1.000003, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)

 [Metadata]
 - 2 contributors now listed as such using x_contributors instead of authors

 [Misc]
 - Moved POD around in source so there's less whitespace prior to relevant code in built source

1.000003 2014-08-06T19:37:32Z
 [Documentation]
 - Add SEE ALSO for ReportPhase.
 - Closes #4

1.000002 2014-08-03T09:31:26Z
 [Bugfix]