@@ -16,7 +16,8 @@ branches:
     - releases
 install:
   - time perl ./maint-travis-ci/install_deps_early.pl
-  - time perl ./maint-travis-ci/install_deps.pl
+  - time perl ./maint-travis-ci/autoinstall_dzil.pl
+  - time perl ./maint-travis-ci/install_deps_2.pl
 language: perl
 matrix:
   allow_failures:
