@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.007.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.009.
 use strict;
 use warnings;
 
@@ -36,7 +36,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::App::Tester" => 0,
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
-    "Test::More" => "0.89"
+    "Test::More" => 0
   },
   "VERSION" => "1.000009",
   "test" => {
@@ -60,7 +60,7 @@ my %FallbackPrereqs = (
   "Role::Tiny" => 0,
   "Scalar::Util" => 0,
   "Term::ANSIColor" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "Try::Tiny" => 0,
   "strict" => 0,
   "warnings" => 0
