@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.000009
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 1.000008 2016-09-10T07:27:49Z
 
