@@ -1,6 +1,13 @@
 Release history for Dist-Zilla-App-Command-dumpphases
 
 {{$NEXT}}
+ [Bugfix]
+ - Fix tests with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 1.000008, see misc/*.deps* for details
+ - develop: +1 ↑1 (suggests: ↑2)
+ - test: ↓1
 
 1.000008 2016-09-10T07:27:49Z d11870f
  [Dependencies::Stats]
